applications/scratch-1461755/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-1461755
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-1461755

  template:
    metadata:
      labels:
        app: scratch-1461755

    spec:
      containers:
      - name: scratch-1461755
        image: scratch:latest

        ports:
        - containerPort: 80
