applications/scratch-1461755/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-1461755
  namespace: scratch

spec:
  selector:
    app: scratch-1461755

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
