applications/scratch-1461755/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-1461755
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-1461755.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-1461755

            port:
              number: 80
